feat: implement booking creation and confirmation with transactional seat locking